fix(CSS): Fix overflow on Month Tile on month of May. Also fixed positioning of month and arrows to absolute position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ a:hover {
   position: relative;
   padding-bottom: 25px;
   border-radius: 25px;
-  margin-top: 25px;
+  margin-top: 25px; 
 }
 
 #currentLocation {
@@ -209,27 +209,45 @@ canvas {
 
 #monthName {
   text-align: center;
-  margin-top: 50%;
-  transform: translate(0, -50%);
+  /* margin-top: 50%;
+  transform: translate(0, -50%); */
 }
 
-#month h1, i {
+/* #month h1, #month i {
   display: inline-block;
   vertical-align: middle;
   margin: 10px 3px;
-}
+} */
 
 #monthName h1 {
+  position: absolute;
   font-size: 50px;
   font-weight: 500;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#monthBack {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+#monthForward {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 
 #monthName i {
-  font-size: 60px;
+  font-size: 55px;
 }
 
 #monthName i:hover {
-  font-size: 70px;
+  font-size: 80px;
 }
 
 #month h2 {
